Conveted more classes that didnt get picked up in my glob search and replace, fixed fairbanks theme-enough for use/QA. Fixed context/add new (green button) div z-index so it sits beneath modal layer.#74

--- a/profiles/openscholar/themes/aglet/flavors/black_grey/black_grey.css
+++ b/profiles/openscholar/themes/aglet/flavors/black_grey/black_grey.css
@@ -9,18 +9,18 @@ body,
   background: transparent;
   }
 
-.wrap {
+#header-container, #columns, #block-os-primary-menu, #footer  {
   width:1000px;
   padding: 0 48px;
   margin: 0 auto;
   }
 
 #header-container {
-  background:url('images/header.png') repeat-x 0 100%;
+  background:url('../images/header.png') repeat-x 0 100%;
 
   }
 
-#header-container .wrap {
+#header-container .gpanel {
   background: #4a4a4a 50% 100%;
 width: 940px;
   }
@@ -30,17 +30,17 @@ width: 940px;
   background: #9a9c9f;
   }
 
-#menu-bar .wrap {
-  background:url('images/nav-wrap.png') repeat-y 50% 0;
+#menu-bar #block-os-primary-menu {
+  background:url('../images/nav-wrap.png') repeat-y 50% 0;
   padding: 0 48px;
   }
 
 body.one-sidebar #columns .wrap {
-  background:url('images/content-wrap-wide.png') repeat-y 50% 0;
+  background:url('../images/content-wrap-wide.png') repeat-y 50% 0;
   }
 
 #columns .wrap {
-  background:url('images/content-wrap.png') repeat-y 50% 0;
+  background:url('../images/content-wrap.png') repeat-y 50% 0;
   }
 
 #footer .wrap {
@@ -48,12 +48,12 @@ body.one-sidebar #columns .wrap {
   width: 884px;
   }
 
-#header-container .wrap .hg-container {
+#header-container .gpanel .hg-container {
   padding-top: 10px;
   }
 
 #menu-bar,
-#menu-bar .wrap,
+#menu-bar #block-os-primary-menu,
 #menu-bar li {
   height: 36px;
   }
@@ -108,7 +108,7 @@ h1#page-title, h2.block-title {
 #menu-bar li a.active,
 #menu-bar li.active-trail a,
 #menu-bar li.active-trail a:hover {
-  background: url('images/nav-over.png') no-repeat 50% 0 transparent;
+  background: url('../images/nav-over.png') no-repeat 50% 0 transparent;
   color: #fff;
   top: 0;
   height: 43px;
