--- a/profiles/openscholar/themes/cleanblue/css/cleanblue.css
+++ b/profiles/openscholar/themes/cleanblue/css/cleanblue.css
@@ -236,7 +236,7 @@ margin: 8px -15px 0 10px;
   border-bottom: 5px solid #d5d3d4;
   }
 
-#menu-bar .wrap {
+#menu-bar #block-os-primary-menu {
   background:#FFF;
   }
 
